--- a/14/HTMLExperience/src/index.html
+++ b/14/HTMLExperience/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<>
 
     <!-- В разделе head можно подключать скрипты, стили, указывать иконку, заголовок окна, описание для поисковых систем,
     мета тэги -->
@@ -8,7 +8,6 @@
     <title>Integrity farm</title>
     <link href="styles.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
 
 
 
@@ -73,13 +72,13 @@
                 <table align="center">
                     <tr>
                         <td>
-                            <table border="1">
+                            <table border="2" rules="row" cellspacing="2" bgcolor="lite-blue">
                                 <tr><td colspan="4" class="t">multiply table</td></tr>
-                                <tr align="center"> <td>1</td>  <td>2</td>    <td>3</td>    <td align="center">4</td>               </tr>
-                                <tr align="center"> <td>2</td>  <td>4</td>    <td>6</td>    <td align="center">8</td>               </tr>
-                                <tr align="center"> <td>3</td>  <td>6</td>    <td>9</td>    <td align="center">12</td>               </tr>
-                                <tr align="center"> <td>4</td>  <td>8</td>    <td>12</td>    <td align="center">16</td>               </tr>
-                                <tr align="center"> <td>5</td>  <td>10</td>    <td>15</td>    <td align="center">20</td>              </tr>
+                                <tr align="center"> <td>1</td>  <td class="even">2</td>    <td>3</td>    <td align="center">4</td>               </tr>
+                                <tr align="center"> <td>2</td>  <td class="even">4</td>    <td>6</td>    <td align="center">8</td>               </tr>
+                                <tr align="center"> <td>3</td>  <td class="even">6</td>    <td>9</td>    <td align="center">12</td>               </tr>
+                                <tr align="center"> <td>4</td>  <td class="even">8</td>    <td>12</td>    <td align="center">16</td>               </tr>
+                                <tr align="center"> <td>5</td>  <td class="even">10</td>    <td>15</td>    <td align="center">20</td>              </tr>
                             </table>
                         </td>
                         <td>
