--- a/14/BrowserEvents/src/index.html
+++ b/14/BrowserEvents/src/index.html
@@ -16,6 +16,16 @@
     <div id="div2">div2 </div>
     <div id="div3">div3 </div>
 
+    <br>
+
+    <input type="button" id="hideButton" value="Click me">
+
+    <form> form
+    <div>div
+    <span> span
+    </span>
+    </div>
+    </form>
 
 
 </body>
