--- a/15/Forms/src/main/resources/static/index.html
+++ b/15/Forms/src/main/resources/static/index.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Form</title>
+    <title>Request for a loan</title>
+    <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="javascript/main.js"></script>
+    <script>
+        function showMessage() {
+            alert( 'Всем привет!' );
+        }
+    </script>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+
+
 </head>
 <body>
+    <h3>My form</h3>
+    <form class="form" id="form" action="/templates" method="post"> <br>
+        <table id="table" align="center">
+            <tr>
+                <td><label for="surname">Фамилия</label></td>
+                <td><input class="formfield" type="text" id="surname" name="surname" size="40"></td>
+            </tr>
+            <tr>
+                <td><label for="name">Имя</label></td>
+                <td><input class="formfield" type="text" id="name" name="name" size="40"></td>
+            </tr>
+            <tr>
+                <td><label for="patronymic">Отчество</label></td>
+                <td><input class="formfield" type="text" id="patronymic" name="patronymic" size="40"></td>
+            </tr>
+            <tr>
+                <td>Дата рождения </td>
+                <td align="right"><input class="formfield" type="date" size="30" name="birthday"></td>
+            </tr>
+            <tr>
+                <td> Номер для связи </td>
+                <td align="right"><input  class="formfield" type="tel" name="phone" pattern="8[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="Формат: 8000-000-00-00" size="22"></td>
+            </tr>
+            <tr>
+                <td>Фото паспорта</td>
+                <td align="right"><input type="file" name="scan" accept="image/*" ></td>
+            </tr>
+            <tr>
+            </tr>
+            <tr>
+                <td align="center"> <em id="showTime" on><b>1 год</b></em></td>
+                <td align="center"><b id="amount">2500000</b><em style="font-size:80%"> рублей</em></td>
+            </tr>
+            <tr>
+                <td align="center"><input type="range" min="1" max="5" value="1" step="1" name="period" id="timeChanger"></td>
+                <td align="center"><input type="range" min="10000" max="5000000" name="count" step="10000" id="size"></td>
 
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center" > <input type="submit" class="formfield" id="btn" value="Отправить заявку" >  </td>
+            </tr>
+
+
+        </table>
+    </form>
 </body>
 </html>
